More minutes woooo
General meeting minutes fantoms

--- a/icds-constitution.tex
+++ b/icds-constitution.tex
@@ -195,11 +195,14 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
     \item General meetings may only be called during undergraduate term time, and must take place on, or in close vicinity of, the South Kensington campus.
     \item A General Meeting may not be called to start after 2100 or before 1000.
     \item No fewer than ten College days' notice of a general meeting must be given in writing to Members of the Society.
-    \item Members may submit agenda for discussion at a general meeting to the Secretary no fewer than five College days before a general meeting. Any agendum so submitted must be proposed by a Member and seconded by at least two other Members.
+    \item Members may submit agenda for discussion at a general meeting to the Secretary no fewer than five College days before a General Meeting. Any agendum so submitted must be proposed by a Member and seconded by at least two other Members.
     \item The Secretary must distribute the agenda for the General meeting to the Members of the Society in writing no fewer than four College days in advance of a general meeting.
-    \item The first agendum of any general meeting must be to accept or reject by vote the minutes of the previous general meeting, or to note any corrections as upheld by vote if necessary.
-    \item The Secretary or their delegated authority must record accurate minutes of the General meeting, which must be published in writing to the Members of the Society within 10 College days of the meeting. Attendees of the General meeting must be given the opportunity to comment on these minutes at least 3 college days before they are so published.
-    \item The Secretary or their delegated authority must publish to the general public minutes which have been accepted at a General Meeting.
+    \item The first agendum of any General Meeting must be to accept or reject by vote the minutes of the previous General Meeting, or to note any corrections as upheld by vote if necessary.
+    \item The Secretary or their delegated authority must record accurate minutes of the General Meeting.
+    \item These minutes must be circulated to attendees of the meeting for their comment and opinion within five College days of the meeting.
+    \item Attendees have a five day period in which to make comment and opinion on the minutes before their wider distribution to all Members of the Society only as draft minutes.
+    \item The attendees' comment and opinions should be appended to these draft minutes prior to their wider distribution and it should be made clear that these minutes are unpublished and unapproved.
+    \item Minutes of General Meetings must be published to the general public within three College days of their approval as a true and accurate record of the meeting to which they refer by the subsequent General Meeting.
     \item Any Member of the Society may submit an opinion on any agenda to the Secretary \textit{in absentia}, which must be read out at the meeting by the Secretary in their stead.
     \item All decisions are made exclusively by the voting membership of the Society.
     \item \policyBye{B11} Quorum shall be 50\% + 1 of the full Members of the Society, who must be present in person or by appointed proxy.
