Clarifications to release of draft minutes; veto
Clarification of release constratints
Allows the president a veto on release of any section of draft minutes

--- a/icds-constitution.tex
+++ b/icds-constitution.tex
@@ -132,7 +132,13 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
     \item Guests of the Committee must ask permission from the Chair of the meeting to speak (ordinarily the President).
     \item The Secretary or their delegated authority shall circulate agenda for meetings of the Committee no less than one College day in advance of the meeting.
     \item The Secretary must circulate to the Committee a draft of the meeting's minutes within three college days of the meeting.
-    \item Members may submit to the Secretary a request to view the draft non-reserved minutes. The Secretary must provide to the member the draft minutes no earlier than three College days after the draft minutes have been circulated to the Committee. Before the minutes are provided to the member, attendees to the meeting must be given the opportunity to make comment on the draft and have these comments appended. It should be made clear that these minutes are unpublished and unapproved.
+    \item A member may submit to the Secretary a request to view the draft non-reserved minutes. The Secretary must provide to such a member the draft minutes as soon as possible, so long as:
+        \begin{enumerate}
+            \item Three College days have passed since the circulation of the draft minutes to the Committee and guests,
+            \item Before the minutes are provided to the member, any comments made on the draft by attendees to the meeting are appended
+            \item The President has the right to veto the release of any section of the draft minutes until the following committee meeting, for reasons that must be provided to the member
+            \item It is made clear that released minutes are unpublished and unapproved
+        \end{enumerate}
     \item The Secretary must publish minutes of a meeting to the general public within three College days of the minutes' approval as a true and accurate record of the meeting to which they refer by the Committee.
     \item An archive of all non-reserved meeting minutes should be made publicly available by the Secretary.
     \item \textit{In extremis}, a member of the Committee may request that minutes be denoted as reserved, either in part or in full, and reasons for the reservation must be included in either the unreserved minutes, the reserved minutes, or both. An indication that minutes were reserved must be present in the unreserved minutes. A request to reserve minutes may be made at any time prior to the publication of the minutes publicly.
