Final draft as approved at the EGM
I made the changes that were discussed in the EGM, so this should be the final document we send to AEB.

--- a/icds-constitution.tex
+++ b/icds-constitution.tex
@@ -12,7 +12,7 @@
 
 \title{Imperial College Dramatic Society Constitution}
 % \author[The ICDS Committee]{The ICDS Committee}
-\date{Proposed at the General Meeting on 03/11/15}
+\date{Passed by the Society at the General Meeting on 03/11/15. Awaiting approval from the Arts and Entertainments Board.}
 
 \newcommand{\policyOffset}{12pt}
 
@@ -104,7 +104,7 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
         \begin{enumerate}
             \item Technical offices are defined to be Technical Director, Lighting Director, Sound Director, Set, Props and Costumes Director, and Systems Administrator.
             \item No officer holding one or more technical offices may hold a non-technical office.
-            \item No officer may hold more than one of President, Vice-President, and Treasurer.
+            \item No officer may hold more than one of President, Vice-President, Treasurer, and Honorary Secretary.
             \item The Ordinary Committee Member must not hold any other offices within the Society.
         \end{enumerate}
     \item \policyCspp{65} The term of office for all positions runs from the 1st of August to the 31st of July.
@@ -134,9 +134,9 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
     \item The Secretary or their delegated authority shall circulate agenda for meetings of the Committee no less than one College day in advance of the meeting.
     \item The first agendum of any Committee meeting must be to approve the minutes of any prior meetings as a true and accurate record of the meeting to which they refer, and to note any corrections as upheld by vote if necessary, provided at least five College days has passed since the said minutes' circulation to the Committee. 
     \item The Secretary must circulate to the Committee a draft of the meeting's minutes within four college days of the meeting.
-    \item A member may submit to the Secretary a request to view the draft non-reserved minutes. The Secretary must provide to such a member the draft minutes as soon as possible, so long as:
+    \item A member may submit to the Secretary a request to view the draft non-reserved minutes. The Secretary must provide to such a member the draft minutes as soon as reasonably possible, so long as:
         \begin{enumerate}
-            \item Three College days have passed since the circulation of the draft minutes to the Committee and guests,
+            \item Two College days have passed since the circulation of the draft minutes to the Committee and Guests,
             \item Before the minutes are provided to the member, any comments made on the draft by attendees to the meeting are appended
             \item The President has the right to veto the release of any section of the draft minutes until the following committee meeting, for reasons that must be provided to the member
             \item It is made clear that released minutes are unpublished and unapproved
