Approved by AEB

--- a/icds-constitution.tex
+++ b/icds-constitution.tex
@@ -6,13 +6,13 @@
 \usepackage{xfrac}
 \usepackage{units}
 
-\usepackage{draftwatermark}
-\SetWatermarkText{Draft}
-\SetWatermarkScale{1.5}
+%\usepackage{draftwatermark}
+%\SetWatermarkText{Draft}
+%\SetWatermarkScale{1.5}
 
 \title{Imperial College Dramatic Society Constitution}
 % \author[The ICDS Committee]{The ICDS Committee}
-\date{Passed by the Society at the General Meeting on 03/11/15. Awaiting approval from the Arts and Entertainments Board.}
+\date{Passed by the Society at the General Meeting on 03/11/15. Approved by the Arts and Entertainments Board at the meeting on 15/12/15.}
 
 \newcommand{\policyOffset}{12pt}
 
