--- a/icds-constitution.tex
+++ b/icds-constitution.tex
@@ -12,7 +12,7 @@
 
 \title{Imperial College Dramatic Society Constitution}
 % \author[The ICDS Committee]{The ICDS Committee}
-\date{Passed by the Society at the General Meeting on 03/11/15. Approved by the Arts and Entertainments Board at the meeting on 15/12/15.}
+\date{Passed by the Society at the General Meeting on 17/10/19. Approved by the Arts and Entertainments Board at the meeting on 06/11/19.}
 
 \newcommand{\policyOffset}{12pt}
 
@@ -124,7 +124,7 @@ References to relevant sections of the Imperial College Union Constitution, Bye-
     \item A meeting must be called by the President upon the request of any three members of the Committee.
     \item The President or their delegated authority shall chair meetings of the Committee.
     \item At least five College days' written notice of planned meetings of the Committee shall be provided by the Secretary to members of the Committee.
-    \item Since time immemorial planned meetings of the Committee have occurred on a Tuesday. This should continue whenever possible, and reasons for deviation noted in the minutes for that meeting.
+    \item Committee meetings shall be held fortnightly at a date and time pre-determined by said Committee prior to each term. Reasons for deviation from the agreed upon date must be noted in the minutes. In the event a consensus on the appropriate day to hold meetings cannot be reached amongst the Committee the default shall be Tuesday, in deference to tradition since time immemorial.
     \item Unplanned meetings may be held with shorter notice if there is a good reason to do so.
     \item \policyBye{B11} Quorum of the Committee shall be 50\%+1 of the officers of the Committee.
     \item Any Member of the Society may observe Committee meetings as a Guest of the Committee.
